@@ -561,7 +561,28 @@
         </control>
         <control type="group">
     		<visible>Skin.HasSetting(musicvis.small)</visible>
-    		<include>OSDSmallAnimation</include>
+    		<animation type="WindowOpen" reversible="false" condition="![Player.ShowInfo | Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]">
+				<effect type="fade" start="0" end="100" time="300" tween="sine" easing="inout" />
+				<effect type="slide" start="0,70" end="0" time="300" tween="sine" easing="inout" />
+			</animation>
+			<animation type="WindowOpen" reversible="false" condition="[Player.ShowInfo | Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]">
+				<effect type="fade" start="0" end="100" time="300" tween="sine" easing="inout" />
+			</animation>
+			<animation type="Visible" reversible="false">
+				<effect type="fade" start="0" end="100" time="300" tween="sine" easing="inout"/>
+				<effect type="slide" start="0,70" end="0" time="300" tween="sine" easing="inout" />
+			</animation>
+			<animation type="WindowClose" reversible="false" condition="![Player.ShowInfo | Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]">
+				<effect type="fade" end="0" start="100" time="200" tween="sine" easing="inout" />
+				<effect type="slide" end="0,70" start="0" time="200" tween="sine" easing="inout" />
+			</animation>
+			<animation type="WindowClose" reversible="false" condition="[Player.ShowInfo | Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]">
+				<effect type="fade" end="0" start="100" time="200" tween="sine" easing="inout" />
+			</animation>
+			<animation type="Hidden" reversible="false">
+				<effect type="fade" start="100" end="0" time="200" tween="sine" easing="inout" />
+				<effect type="slide" end="0,70" start="0" time="200" tween="sine" easing="inout" />
+			</animation>
 			<control type="group">
 				<visible>!Skin.HasSetting(osd.darkpanel)</visible>
 				<control type="group">
